para_meta2/y.output
Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: function
    3          | functions function

    4 function: IDENTIFIER '(' parameters ')' '=' expression

    5 parameters: parameter
    6           | parameters ',' parameter

    7 parameter: INTEGER IDENTIFIER
    8          | DOUBLE IDENTIFIER

    9 arguments: expression
   10          | arguments ',' expression

   11 expression: IDENTIFIER
   12           | NATURAL
   13           | DECIMAL
   14           | IDENTIFIER '(' arguments ')'
   15           | IF expression THEN expression ELSE expression
   16           | expression '+' expression
   17           | expression '-' expression
   18           | expression '*' expression
   19           | expression '/' expression
   20           | '(' expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 14 20
    ')' (41) 4 14 20
    '*' (42) 18
    '+' (43) 16
    ',' (44) 6 10
    '-' (45) 17
    '/' (47) 19
    '=' (61) 4
    error (256)
    INTEGER (258) 7
    DOUBLE (259) 8
    IF (260) 15
    THEN (261) 15
    ELSE (262) 15
    IDENTIFIER <lexeme> (263) 4 7 8 11 14
    NATURAL <lexeme> (264) 12
    DECIMAL <lexeme> (265) 13
    LOW (266)


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    program <node> (21)
        on left: 1
        on right: 0
    functions <node> (22)
        on left: 2 3
        on right: 1 3
    function <node> (23)
        on left: 4
        on right: 2 3
    parameters <node> (24)
        on left: 5 6
        on right: 4 6
    parameter <node> (25)
        on left: 7 8
        on right: 5 6
    arguments <node> (26)
        on left: 9 10
        on right: 10 14
    expression <node> (27)
        on left: 11 12 13 14 15 16 17 18 19 20
        on right: 4 9 10 15 16 17 18 19 20


State 0

    0 $accept: • program $end
    1 program: • functions
    2 functions: • function
    3          | • functions function
    4 function: • IDENTIFIER '(' parameters ')' '=' expression

    IDENTIFIER  shift, and go to state 1

    program    go to state 2
    functions  go to state 3
    function   go to state 4


State 1

    4 function: IDENTIFIER • '(' parameters ')' '=' expression

    '('  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: functions •  [$end]
    3 functions: functions • function
    4 function: • IDENTIFIER '(' parameters ')' '=' expression

    IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


State 4

    2 functions: function •

    $default  reduce using rule 2 (functions)


State 5

    4 function: IDENTIFIER '(' • parameters ')' '=' expression
    5 parameters: • parameter
    6           | • parameters ',' parameter
    7 parameter: • INTEGER IDENTIFIER
    8          | • DOUBLE IDENTIFIER

    INTEGER  shift, and go to state 8
    DOUBLE   shift, and go to state 9

    parameters  go to state 10
    parameter   go to state 11


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 functions: functions function •

    $default  reduce using rule 3 (functions)


State 8

    7 parameter: INTEGER • IDENTIFIER

    IDENTIFIER  shift, and go to state 12


State 9

    8 parameter: DOUBLE • IDENTIFIER

    IDENTIFIER  shift, and go to state 13


State 10

    4 function: IDENTIFIER '(' parameters • ')' '=' expression
    6 parameters: parameters • ',' parameter

    ')'  shift, and go to state 14
    ','  shift, and go to state 15


State 11

    5 parameters: parameter •

    $default  reduce using rule 5 (parameters)


State 12

    7 parameter: INTEGER IDENTIFIER •

    $default  reduce using rule 7 (parameter)


State 13

    8 parameter: DOUBLE IDENTIFIER •

    $default  reduce using rule 8 (parameter)


State 14

    4 function: IDENTIFIER '(' parameters ')' • '=' expression

    '='  shift, and go to state 16


State 15

    6 parameters: parameters ',' • parameter
    7 parameter: • INTEGER IDENTIFIER
    8          | • DOUBLE IDENTIFIER

    INTEGER  shift, and go to state 8
    DOUBLE   shift, and go to state 9

    parameter  go to state 17


State 16

    4 function: IDENTIFIER '(' parameters ')' '=' • expression
   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 23


State 17

    6 parameters: parameters ',' parameter •

    $default  reduce using rule 6 (parameters)


State 18

   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   15           | IF • expression THEN expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 24


State 19

   11 expression: IDENTIFIER •  [$end, THEN, ELSE, IDENTIFIER, '+', '-', '*', '/', ')', ',']
   14           | IDENTIFIER • '(' arguments ')'

    '('  shift, and go to state 25

    $default  reduce using rule 11 (expression)


State 20

   12 expression: NATURAL •

    $default  reduce using rule 12 (expression)


State 21

   13 expression: DECIMAL •

    $default  reduce using rule 13 (expression)


State 22

   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'
   20           | '(' • expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 26


State 23

    4 function: IDENTIFIER '(' parameters ')' '=' expression •  [$end, IDENTIFIER]
   16 expression: expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 4 (function)


State 24

   15 expression: IF expression • THEN expression ELSE expression
   16           | expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression

    THEN  shift, and go to state 31
    '+'   shift, and go to state 27
    '-'   shift, and go to state 28
    '*'   shift, and go to state 29
    '/'   shift, and go to state 30


State 25

    9 arguments: • expression
   10          | • arguments ',' expression
   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   14           | IDENTIFIER '(' • arguments ')'
   15           | • IF expression THEN expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    arguments   go to state 32
    expression  go to state 33


State 26

   16 expression: expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression
   20           | '(' expression • ')'

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    '/'  shift, and go to state 30
    ')'  shift, and go to state 34


State 27

   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   16           | • expression '+' expression
   16           | expression '+' • expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 35


State 28

   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   17           | expression '-' • expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 36


State 29

   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   18           | expression '*' • expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 37


State 30

   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   19           | expression '/' • expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 38


State 31

   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   15           | IF expression THEN • expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 39


State 32

   10 arguments: arguments • ',' expression
   14 expression: IDENTIFIER '(' arguments • ')'

    ')'  shift, and go to state 40
    ','  shift, and go to state 41


State 33

    9 arguments: expression •  [')', ',']
   16 expression: expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 9 (arguments)


State 34

   20 expression: '(' expression ')' •

    $default  reduce using rule 20 (expression)


State 35

   16 expression: expression • '+' expression
   16           | expression '+' expression •  [$end, THEN, ELSE, IDENTIFIER, '+', '-', ')', ',']
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression

    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 16 (expression)

    Conflict between rule 16 and token '+' resolved as reduce (%left '+').
    Conflict between rule 16 and token '-' resolved as reduce (%left '-').
    Conflict between rule 16 and token '*' resolved as shift ('+' < '*').
    Conflict between rule 16 and token '/' resolved as shift ('+' < '/').


State 36

   16 expression: expression • '+' expression
   17           | expression • '-' expression
   17           | expression '-' expression •  [$end, THEN, ELSE, IDENTIFIER, '+', '-', ')', ',']
   18           | expression • '*' expression
   19           | expression • '/' expression

    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 17 (expression)

    Conflict between rule 17 and token '+' resolved as reduce (%left '+').
    Conflict between rule 17 and token '-' resolved as reduce (%left '-').
    Conflict between rule 17 and token '*' resolved as shift ('-' < '*').
    Conflict between rule 17 and token '/' resolved as shift ('-' < '/').


State 37

   16 expression: expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   18           | expression '*' expression •  [$end, THEN, ELSE, IDENTIFIER, '+', '-', '*', '/', ')', ',']
   19           | expression • '/' expression

    $default  reduce using rule 18 (expression)

    Conflict between rule 18 and token '+' resolved as reduce ('+' < '*').
    Conflict between rule 18 and token '-' resolved as reduce ('-' < '*').
    Conflict between rule 18 and token '*' resolved as reduce (%left '*').
    Conflict between rule 18 and token '/' resolved as reduce (%left '/').


State 38

   16 expression: expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression
   19           | expression '/' expression •  [$end, THEN, ELSE, IDENTIFIER, '+', '-', '*', '/', ')', ',']

    $default  reduce using rule 19 (expression)

    Conflict between rule 19 and token '+' resolved as reduce ('+' < '/').
    Conflict between rule 19 and token '-' resolved as reduce ('-' < '/').
    Conflict between rule 19 and token '*' resolved as reduce (%left '*').
    Conflict between rule 19 and token '/' resolved as reduce (%left '/').


State 39

   15 expression: IF expression THEN expression • ELSE expression
   16           | expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression

    ELSE  shift, and go to state 42
    '+'   shift, and go to state 27
    '-'   shift, and go to state 28
    '*'   shift, and go to state 29
    '/'   shift, and go to state 30


State 40

   14 expression: IDENTIFIER '(' arguments ')' •

    $default  reduce using rule 14 (expression)


State 41

   10 arguments: arguments ',' • expression
   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 43


State 42

   11 expression: • IDENTIFIER
   12           | • NATURAL
   13           | • DECIMAL
   14           | • IDENTIFIER '(' arguments ')'
   15           | • IF expression THEN expression ELSE expression
   15           | IF expression THEN expression ELSE • expression
   16           | • expression '+' expression
   17           | • expression '-' expression
   18           | • expression '*' expression
   19           | • expression '/' expression
   20           | • '(' expression ')'

    IF          shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    NATURAL     shift, and go to state 20
    DECIMAL     shift, and go to state 21
    '('         shift, and go to state 22

    expression  go to state 44


State 43

   10 arguments: arguments ',' expression •  [')', ',']
   16 expression: expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 10 (arguments)


State 44

   15 expression: IF expression THEN expression ELSE expression •  [$end, THEN, ELSE, IDENTIFIER, ')', ',']
   16           | expression • '+' expression
   17           | expression • '-' expression
   18           | expression • '*' expression
   19           | expression • '/' expression

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 15 (expression)

    Conflict between rule 15 and token '+' resolved as shift (LOW < '+').
    Conflict between rule 15 and token '-' resolved as shift (LOW < '-').
    Conflict between rule 15 and token '*' resolved as shift (LOW < '*').
    Conflict between rule 15 and token '/' resolved as shift (LOW < '/').
